--- a/src/scss/blocks/_subscription.scss
+++ b/src/scss/blocks/_subscription.scss
@@ -3,6 +3,7 @@
     margin-bottom: 80px;
     padding: 0 32px;
 
+    
     @include medium {
         padding: 0 8px;
         margin-top: -50px;
@@ -16,6 +17,17 @@
         z-index: 1;
         padding: 0;
 
+        &::before {
+            content: url('./../../img/subscription/line-bg-sub.png');
+            position: absolute;
+            top: -40px;
+            left: 100px;
+            right: 0;
+            bottom: 0;
+            overflow-x: hidden;
+            overflow-y: hidden;
+        }
+
         @include tablet {
             background-image: url('./../../img/subscription/bg-medium.png');
             background-position: left center; /* x y */
@@ -23,16 +35,6 @@
             overflow: hidden;
             border-radius: 40px;
 
-            &::before {
-                content: url('./../../img/subscription/line-bg-sub.png');
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                overflow-x: hidden;
-                overflow-y: hidden;
-            }
         }
 
         @include mediumS {
